extensions/system/theme/css/theme.css
/* ... */
/*
 * Micro clearfix
 */
.uk-htmleditor-content:before,
.uk-htmleditor-content:after {
  content: " ";
  display: table;
}
.uk-htmleditor-content:after {
  clear: both;
}
/* Modifier `uk-htmleditor-fullscreen`
 ========================================================================== */
.uk-htmleditor-fullscreen {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 990;
}
.uk-htmleditor-fullscreen .uk-htmleditor-content {
  position: absolute;
  top: 41px;
  left: 0;
  right: 0;
  bottom: 0;
}
.uk-htmleditor-fullscreen .uk-icon-expand:before {
  content: "\f066";
}
/* Sub-objects `uk-htmleditor-code` and `uk-htmleditor-preview`
 ========================================================================== */
.uk-htmleditor-code,
.uk-htmleditor-preview {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
.uk-htmleditor-preview {
  padding: 20px;
  overflow-y: scroll;
}
/*
 * Tab view
 */
[data-mode='tab'][data-active-tab='code'] .uk-htmleditor-preview,
[data-mode='tab'][data-active-tab='preview'] .uk-htmleditor-code {
  display: none;
}
/*
 * Split view
 */
[data-mode='split'] .uk-htmleditor-code,
[data-mode='split'] .uk-htmleditor-preview {
  float: left;
  width: 50%;
}
[data-mode='split'] .uk-htmleditor-code {
  border-right: 1px solid #eeeeee;
}
/* CodeMirror modifications
 ========================================================================== */
.uk-htmleditor .CodeMirror {
  padding: 10px;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
/*
     * Apply same `border-radius` as `uk-htmleditor-navbar`
     */
.uk-htmleditor-navbar-nav:first-child > li:first-child > a {
  border-top-left-radius: 2px;
}
/*
     * Sub-modifier `uk-htmleditor-navbar-flip`
     */
/* Collapse border */
.uk-htmleditor-navbar-flip .uk-htmleditor-navbar-nav > li > a {
  margin-left: 0;
  margin-right: -1px;
}
/* Apply same `border-radius` as `uk-htmleditor-navbar` */
.uk-htmleditor-navbar-flip .uk-htmleditor-navbar-nav:first-child > li:first-child > a {
  border-top-left-radius: 0;
}
.uk-htmleditor-navbar-flip .uk-htmleditor-navbar-nav:last-child > li:last-child > a {
  border-top-right-radius: 2px;
}
/*
     * Sub-modifier `uk-htmleditor-fullscreen`
     */
.uk-htmleditor-fullscreen .uk-htmleditor-navbar {
  border-top: none;
  border-left: none;
  border-right: none;
  border-radius: 0;
}
.uk-htmleditor-fullscreen .uk-htmleditor-content {
  border: none;
  border-radius: 0;
}
.uk-htmleditor-fullscreen .uk-htmleditor-navbar-nav > li > a {
  border-radius: 0 !important;
}
/* ========================================================================
   Component: Notify
 ========================================================================== */
/*
 * Message container for positioning
 */
.uk-notify {
  position: fixed;
  top: 50px;
  left: 50px;
  z-index: 980;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  width: 350px;
}
/* Position modifiers
========================================================================== */
.uk-notify-top-right,
.uk-notify-bottom-right {
  left: auto;
  right: 50px;
}
.uk-notify-top-center,
.uk-notify-bottom-center {
  left: 50%;
  margin-left: -175px;
}
.uk-notify-bottom-left,
.uk-notify-bottom-right,
.uk-notify-bottom-center {
  top: auto;
  bottom: 50px;
}
/* Responsiveness
========================================================================== */
/* Phones portrait and smaller */
@media (max-width: 479px) {
  /*
     * Fit in small screen
     */
  .uk-notify {
    left: 10px;
    right: 10px;
    width: auto;
    margin: 0;
  }
}
/* Sub-object: `uk-notify-message`
========================================================================== */
.uk-notify-message {
  position: relative;
  margin-bottom: 15px;
  padding: 15px;
  background: rgba(240, 240, 240, 0.9);
  color: #444444;
  font-size: 16px;
  line-height: 22px;
  cursor: pointer;
  border-radius: 4px;
  font-weight: 300;
}
/* Close in notify
 ========================================================================== */
.uk-notify-message > .uk-close {
  visibility: hidden;
  float: right;
}
.uk-notify-message:hover > .uk-close {
  visibility: visible;
}
/* Modifier: `uk-alert-info`
 ========================================================================== */
.uk-notify-message-primary {
  background: rgba(225, 242, 251, 0.9);
  color: #37a5e4;
}
/* Modifier: `uk-alert-success`
 ========================================================================== */
.uk-notify-message-success {
  background: rgba(236, 247, 233, 0.9);
  color: #80c96d;
}
/* Modifier: `uk-notify-message-warning`
 ========================================================================== */
.uk-notify-message-warning {
  background: rgba(255, 240, 224, 0.9);
  color: #ff9a2e;
}
/* Modifier: `uk-notify-message-danger`
 ========================================================================== */
.uk-notify-message-danger {
  background: rgba(253, 231, 231, 0.9);
  color: #f0615b;
}
/* ========================================================================
   Component: Sortable
 ========================================================================== */
.uk-sortable {
  padding: 0;
  list-style: none;
  margin: 0;
}
/* Sub-object `uk-sortable-list`
 ========================================================================== */
.uk-sortable-list {
  margin: 0;
  padding-left: 40px;
  list-style: none;
}
/* Sub-modifier `uk-sortable-list-dragged`
 ========================================================================== */
.uk-sortable-list-dragged {
  position: absolute;
  z-index: 1050;
  padding-left: 0;
  pointer-events: none;
  padding-top: 1px;
}
/* Sub-object `uk-sortable-item`
 ========================================================================== */
.uk-sortable-item {
  margin-bottom: 0;
  padding: 10px;
  background: #ffffff;
  margin-top: -1px;
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
}
/* ... */

